# approved

./: .dockerignore  .gitignore  Dockerfile  fly.toml  manage.py  pyproject.toml  tailwind.config.js
approved/: asgi.py  settings.py  urls.py  wsgi.py
companies/: admin.py  extract_data.py  models.py
companies/management/commands/: import_data.py
companies/migrations/: 0001_initial.py  0002_company_slug.py  0003_companyrequest.py  0004_alter_company_about_alter_company_date_founded_and_more.py
legals/: admin.py  apps.py  models.py
legals/chains/: extract_terms_and_conditions.py  governing_law.py  license_grants.py  restrictions.py  termination.py
legals/management/commands/: create_legals.py
legals/migrations/: 0001_initial.py  0002_alter_companylegal_disclaimer_and_more.py
scripts/: entrypoint.sh
web/: apps.py  urls.py  utils.py  views.py
web/static/css/: input.css  output.css  styles.css
web/static/js/: app.js
web/templates/: _messages.html  base.html  detail.html  index.html  request_company.html
