[tool.poetry]
name = "approved"
version = "0.1.0"
description = ""
authors = ["Damian Akpan <damiakpan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
markdown = "^3.7"
langchain-google-genai = "^1.0.10"
langchain = "^0.2.14"
gunicorn = "^23.0.0"
wikipedia = "^1.4.0"
tavily-python = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
